# etl-scripts

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  HelpfulCommands.md  README-dev.md  README-ops.md  README.md  append_dataset.py  availability-check.py  check-available.py  check-uptodate.py  chirps.py  clean.sh  cpc-chirps.py  cpc.py  development.md  download_monthly_gribs.py  era5-env.json.example  era5-sharded.py  era5.py  load_dataset.py  plot-random-timepoint.py  print-ds.py  prism.py  publish-all-to-ipns.sh  pyproject.toml  repo-map.md  requirements-lock.txt  requirements.txt  shared-functions.sh  stac-gen-input-template.json  stac.py  temp-kubo.py  test_get_ds.py  verify_era5_zarr.py
.github/workflows/: chirps-availability-check.yaml  chirps-check-uptodate.yaml  cpc-available.yaml  cpc-availablity-check.yaml  cpc-check-uptodate.yaml  (+5 more)
aifs/: ensemble.py  precip.py  utils.py
chirps/: .gitignore  README.md  chirps.py  combine.sh  combine_to_zarr.py  download.sh  fetch.sh  load_to_ipld.sh  pipeline.sh  prefetch.sh  rechunk.sh  shared_functions.sh  transform.py  transform.sh  zarr_to_ipld.py
copernicus_marine/: .env.example  .gitignore  README.md  assessor.py  base_values.py  cli.py  combiner.py  compressor.py  config.py  copernicus_marine.py  fetcher.py  ipld_loader.py  metadata.py  old_fetcher.py  publisher.py  transformer.py
cpc/: .gitignore  README.md  availability-check.py  combine.sh  combine_to_zarr.py  cpc-pipeline.sh  cpc.py  download.sh  etl.py  extract.sh  fetch.sh  load-to-ipld.sh  pipeline.sh  prefetch.sh  shared-functions.sh  shared_functions.sh  stac-template.json  transform.py  transform.sh  update-ipns.sh  update_ipns.sh  zarr_to_ipld.py
cpc/docs/: docs.md  (+1 more)
dataset_manager/: dataset_manager.py
era5/: .env.example  README.md  assessor.py  base_values.py  check_identical.py  cids.json  cli.py  combiner.py  composite.py  compressor.py  config.py  download_monthly_gribs.py  downloader.py  era5-env.json.example  era5.py  era5_precip.py  etl.py  extractor.py  fetcher.py  fetchers.py  ipld_stac_loader.py  metadata.py  monitoring.py  pipeline.py  processor.py  scheduler.py  stac.py  standardizer.py  total_precipitation.py  transformer.py  utils.py  validator.py  verifier.py
etl_scripts/: __init__.py  grabbag.py  hamt_store_contextmanager.py  transform.py  transform_prism.py  zarr_to_ipfs.py
monitoring/: swarm-connect.sh  test.py  test_get_ds.py
one-shots/: Parente2025.ipynb
operations/: clean.sh  cluster-unpin-all.sh  dev-webhook.py  kubo-unpin-all.sh  pin-stacs.sh  pipeline-cpc.sh  publish-to-ipns.sh  run-pipeline.sh
prism/: .gitignore  README.md  combine.py  combine.sh  create-bootstrap.sh  download-from-bootstrap.sh  download.sh  fetch.sh  load_to_ipld.sh  pipeline.sh  prefetch.sh  shared_functions.sh  transform.sh  update-bootstrap.sh  write_available_for_year.sh
shared_python/: combine.py  extract_netcdf.py
shared_python_scripts/: combine.py  extract_netcdf.py  rechunk_nc.py  transform.py  transform_nc.py  transform_prism.py  zarr_to_ipfs.py  zarr_to_ipld.py
tests/: test_era5_standardize.py  test_grabbag.py
utils/: helper_functions.py
veg-index/: fpar.py  fpar_minmax.py  utils.py  vegetation_index.py
vh/: fetch.sh  load_to_ipld.sh  prefetch.sh
vhi/: .gitignore  assessor.py  cli.py  combiner.py  extractor.py  fetch.sh  fetcher.py  ipld_loader.py  ipld_stac_loader.py  metadata.py  prefetch.sh  publisher.py  shared-functions.sh  transform.sh  transformer.py  vhi.py
(+36 files in other folders)
