[project]
name = "etl-scripts"
# Semantic Versioning https://semver.org/
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "asyncclick>=8.1.8",
    # Used for talking to R2
    "boto3>=1.37.9",
    # For downloading ERA5 data from the CDS API
    "cdsapi>=0.7.5",
    # xarray needs this to read GRIB files
    "cfgrib>=0.9.15.0",
    # Used for creating CLI scripts
    "click>=8.1.7",
    "numcodecs==0.15.1", # temporary until new release after 0.16 which was yanked
    # Versions that work with zarr v3
    "py-hamt",
    "xarray[io,parallel,viz]>=2025.3.0",
    "zarr>=3.0.8",
    "rasterio>=1.4.3",
]

# numcodecs, dask, pandas, numpy, and multiformats are imports in various files, but not in pyproject.toml dependencies, since they are required by xarray, so we just use the existing compatible versions that are installed when xarray is installed

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["I"]

[tool.ruff.format]
quote-style = "double"

[tool.uv.sources]
py-hamt = { git = "https://github.com/dclimate/py-hamt", rev = "964496bb1e5b45869823419c8b5aa6a89cd2f8f6" }

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
